<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        android:paddingBottom="10dp"
        />
    <TextView
        android:layout_marginTop="200dp"
        android:text="@string/judul"
        android:padding="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:id="@+id/relativeLayoutId"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pb_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btn_create"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="350dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@null"
            android:src="@drawable/icon_create" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="450dp"
            android:clickable="false"
            android:textStyle="bold"
            android:text="@string/buat_nikah"/>

        <ImageButton
            android:id="@+id/btn_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="350dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="190dp"
            android:layout_alignLeft="@+id/btn_create"
            android:layout_marginBottom="-158dp"
            android:background="@null"
            android:src="@drawable/view_data" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="265dp"
            android:layout_marginTop="450dp"
            android:clickable="false"
            android:textStyle="bold"
            android:text="@string/lihat_nikah"/>

        <TextView
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:gravity="center_horizontal"
            android:text="@string/visi"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="520dp"
            android:gravity="center_horizontal"
            android:text="@string/text_visi"
            android:textAlignment="center" />

        <TextView
            android:textAlignment="center"
            android:text="@string/misi"
            android:textStyle="bold"
            android:layout_marginTop="550dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:text="@string/misi_1"
            android:layout_marginTop="570dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:text="@string/misi_2"
            android:layout_marginTop="610dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:text="@string/misi_2"
            android:layout_marginTop="650dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
    </RelativeLayout>

</RelativeLayout>