<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linear0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:padding="10dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/colon_laki"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nik"
            android:textSize="16dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:textSize="16dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:maxLines="2"
            android:textSize="16dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_agama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agama"
            android:maxLines="2"
            android:textSize="16dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_telepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="No Hp"
            android:textSize="16dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et_tangggal_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tanggal Lahir"
            android:textSize="16dp"
            android:drawableRight="@drawable/calender"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_upload_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_foto"
            android:drawableRight="@drawable/upload"
            android:textSize="16dp"
            android:inputType="text"/>
        <ImageView
            android:id="@+id/img_foto"
            android:paddingTop="10dp"
            android:paddingBottom="110dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_upload_ktp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_ktp"
            android:textSize="16dp"
            android:drawableRight="@drawable/upload"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_upload_kk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_kk"
            android:textSize="16dp"
            android:drawableRight="@drawable/upload"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:padding="10dp"
        android:layout_marginTop="480dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/calon_perempuan"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_nik_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nik"
            android:textSize="16dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_nama_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:textSize="16dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_alamat_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:maxLines="2"
            android:textSize="16dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_agama_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agama"
            android:maxLines="2"
            android:textSize="16dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_telepon_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="No Hp"
            android:textSize="16dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et_tangggal_l_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tanggal Lahir"
            android:textSize="16dp"
            android:drawableRight="@drawable/calender"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_upload_foto_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_foto"
            android:textSize="16dp"
            android:drawableRight="@drawable/upload"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_upload_ktp_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_ktp"
            android:textSize="16dp"
            android:drawableRight="@drawable/upload"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_upload_kk_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_kk"
            android:textSize="16dp"
            android:drawableRight="@drawable/upload"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:padding="10dp"
        android:layout_marginTop="950dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/jadwal_nikah"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal_nikah"
            android:drawableRight="@drawable/calender"
            android:textSize="16dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_hari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hari"
            android:textSize="16dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_tempat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tempat"
            android:textSize="16dp"
            android:inputType="text"/>
    </LinearLayout>

</RelativeLayout>